# nautobot-app-fsus

./: .bandit.yml  .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/poetry/: action.yml
.github/workflows/: ci.yml  documentation.yml  publish.yml
development/: Dockerfile  development.env  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.mysql.yml  docker-compose.postgres.yml  nautobot_config.py
docs/: extra.css  requirements.txt
docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.html
docs/admin/release_notes/: index.md  version_1.0.md  version_2.0.md  version_3.0.md
docs/dev/: contributing.md  dev_env.md
docs/dev/code_reference/: api.md  index.md  models.md  package.md
docs/models/: cpu.md  cputemplate.md  cputype.md  disk.md  disktemplate.md  disktype.md  fan.md  fantemplate.md  fantype.md  gpu.md  gpubaseboard.md  gpubaseboardtemplate.md  gpubaseboardtype.md  gputemplate.md  gputype.md  hba.md  hbatemplate.md  hbatype.md  mainboard.md  mainboardtemplate.md  mainboardtype.md  nic.md  nictemplate.md  nictype.md  otherfsu.md  otherfsutemplate.md  otherfsutype.md  psu.md  psutemplate.md  psutype.md  rammodule.md  rammoduletemplate.md  rammoduletype.md
docs/user/: fsus.md  index.md
nautobot_fsus/: __init__.py  choices.py  filter_extensions.py  navigation.py  signals.py  template_content.py  urls.py
nautobot_fsus/api/: mixins.py  nested_serializers.py  urls.py  views.py
nautobot_fsus/api/serializers/: __init__.py  fsu_templates.py  fsu_types.py  fsus.py
nautobot_fsus/filters/: __init__.py  fsu_templates.py  fsu_types.py  fsus.py  mixins.py
nautobot_fsus/forms/: __init__.py  fsu_templates.py  fsu_types.py  fsus.py  mixins.py
nautobot_fsus/management/commands/: create_fsus_env.py  flush_fsus_env.py
nautobot_fsus/migrations/: 0001_initial.py  0002_null_statuses.py  0003_auto_20240816_2107.py
nautobot_fsus/models/: __init__.py  fsu_templates.py  fsu_types.py  fsus.py  mixins.py
nautobot_fsus/tables/: __init__.py  fsu_templates.py  fsu_types.py  fsus.py  mixins.py
nautobot_fsus/templates/nautobot_fsus/: device_fsu_tab.html  fsu.html  fsu_create.html  fsu_template.html  fsu_template_create.html  fsu_type.html  location_fsu_tab.html
nautobot_fsus/templates/nautobot_fsus/inc/: devicetype_fsu_table.html  devicetype_fsus.html  fsu_tab_table.html  fsu_tables.html  gpubaseboard_gpus.html  hba_disks.html  mainboard_cpus.html  nic_interfaces.html  parent_gpubaseboard_panel.html  parent_hba_panel.html  parent_mainboard_panel.html  parent_nic_panel.html  parent_psu_panel.html  psu_power_ports.html  tab_title.html
nautobot_fsus/templatetags/: fsu_helpers.py
nautobot_fsus/tests/: runner.py  test_api.py  test_filters.py  test_forms.py  test_graphql.py
nautobot_fsus/tests/fixtures/: __init__.py  create_obj_fixtures.py
nautobot_fsus/tests/models/: test_fsu_templates.py  test_fsu_types.py  test_fsus.py
nautobot_fsus/tests/views/: test_fsu_templates.py  test_fsu_types.py  test_fsus.py
nautobot_fsus/utilities/: __init__.py  testing.py
nautobot_fsus/utilities/testing/: __init__.py  api.py  filters.py  forms.py  models.py
nautobot_fsus/views/: __init__.py  fsu_templates.py  fsu_types.py  fsus.py  mixins.py
tasks/: __init__.py  control.py  helpers.py  test.py
